[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "eai-tools"
version = "0.0.1"
description = "A toolkit to boost the development of Efficient AI Group."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "termcolor>=2.0.0",
    "tabulate>=0.9.0",
    "pydantic>=2.0.0",
    "huggingface-hub>=0.20.0"
]

[project.scripts]
eai-run = "cli.run:main"
eai-upload = "cli.upload2hf:main"

[project.urls]
"Homepage" = "https://github.com/Efficient-Large-Model/EAI-Utils"
"Bug Tracker" = "https://github.com/Efficient-Large-Model/EAI-Utils/issues"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120

[tool.setuptools.packages.find]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*"]

[tool.wheel]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*"]
